# flutter_wacom_signature_pad

./: .pubignore  CHANGELOG.md  LICENSE  README.md  analysis.txt  analysis_2.txt  analysis_utf8.txt  build_log.txt  pubspec.yaml
android/app/: build.gradle.kts
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: flutter_wacom_signature_pad.dart  main.dart
lib/core/: providers.dart
lib/core/services/: file_service.dart  pdf_service.dart  recent_files_service.dart  signature_storage_service.dart  wacom_service.dart
lib/src/constants/: app_colors.dart
lib/src/providers/: providers.dart
lib/src/services/: pdf_service.dart
lib/src/widgets/: home_screen.dart  pdf_viewer_screen.dart  saved_signatures_dialog.dart  signature_box_overlay.dart  signature_dialog.dart  wacom_connect_button.dart  wacom_pdf_signer.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
wacom-package/wacom_app/: README.md  analysis_3.txt  build_log_full.txt  build_log_verbose.txt  pubspec.yaml
wacom-package/wacom_app/lib/: main.dart
wacom-package/wacom_app/linux/: CMakeLists.txt
wacom-package/wacom_app/test/: widget_test.dart
wacom_stu_plugin/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
wacom_stu_plugin/example/: README.md  pubspec.yaml
wacom_stu_plugin/example/integration_test/: plugin_integration_test.dart
wacom_stu_plugin/example/lib/: main.dart
wacom_stu_plugin/example/test/: widget_test.dart
wacom_stu_plugin/example/windows/: CMakeLists.txt
wacom_stu_plugin/lib/: wacom_stu_plugin.dart  wacom_stu_plugin_method_channel.dart  wacom_stu_plugin_platform_interface.dart
wacom_stu_plugin/test/: wacom_stu_plugin_method_channel_test.dart  wacom_stu_plugin_test.dart
wacom_stu_plugin/windows/: CMakeLists.txt  wacom_stu_plugin.cpp  wacom_stu_plugin.h  wacom_stu_plugin_c_api.cpp
wacom_stu_plugin/windows/include/: wgssSTU.h
wacom_stu_plugin/windows/include/wacom_stu_plugin/: wacom_stu_plugin_c_api.h
wacom_stu_plugin/windows/test/: wacom_stu_plugin_test.cpp
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+25 files in other folders)
